# DEBE

./: debe.cabal
src/: Graph.hs  Main.hs  Token.hs
test/: GraphSpec.hs  TokenSpec.hs
