name:                debe
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rubenpieters/debe#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Pieters
maintainer:          example@example.com
copyright:           2017 Ruben Pieters
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Token
                       Graph
  build-depends:       base >= 4 && < 5
                     , lens
  ghc-options:         -Wall
  default-language:    Haskell2010

executable debe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lens

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  other-modules:       TokenSpec
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && <5
                     , hspec == 2.*
                     , QuickCheck
                     , debe
